Update h2o_model_score.md